# ai-stack

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: ai_agent_instructions.md  architecture.md  design.md  learnings.md  plan.md  prd.md  research.txt  status.md
gateway/: Cargo.toml
gateway/src/: main.rs
llm-node/: Cargo.toml
llm-node/src/: main.rs
tts-node/: Cargo.toml
tts-node/src/: main.rs
ui/: Cargo.toml
ui/src/: lib.rs
ui/static/: index.html
