[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = { version = "0.4", features = ["server"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
